@@ -1,3 +1,4 @@
+* Add language attribute to data tag
 * Add e-mail template
 * Send e-mail on behalf of user
 * Register mixins to generic Report class
